# StreamFlow

./: LICENSE  README.md  metadata.json  package-lock.json  package.json  test-pg.ts  vite.config.ts
src/: App.tsx  types.ts
src/components/: CliConsole.tsx  ClusterVisualizer.tsx  CodeExplorer.tsx  MetricsDashboard.tsx  ProducerConsumerPlayground.tsx  TopicManager.tsx
src/data/: cpp_files.ts
src/server/: db.ts  index.ts
streamflow/: CMakeLists.txt  README.md  docker-compose.yml
streamflow/broker/: broker.cpp  broker.hpp
streamflow/common/: types.hpp
streamflow/consensus/: raft_node.cpp  raft_node.hpp
streamflow/consumer/: consumer.cpp  consumer.hpp
streamflow/producer/: producer.cpp  producer.hpp
streamflow/proto/: streamflow.proto
streamflow/storage/: segment_log.cpp  segment_log.hpp
streamflow/tests/: consensus_test.cpp  storage_test.cpp
